--- a/vendor.html
+++ b/vendor.html
@@ -43,6 +43,7 @@
           <th>Vendor Remarks</th>
           <th>Project<br />Manager</th>
           <th>Folder</th>
+          <th>Designer</th>
           <th>Model<br/>Approved On</th>
           <th>Qty</th>
           <th>Task<br />Assigned On</th>
