Renamed one header and commented out another

--- a/vendor.html
+++ b/vendor.html
@@ -44,9 +44,9 @@
           <th>Project<br />Manager</th>
           <th>Folder</th>
           <th>Designer</th>
-          <th>Model<br/>Approved On</th>
+          <th>Design<br/>Approved On</th>
           <th>Qty</th>
-          <th>Task<br />Assigned On</th>
+          <!-- <th>Task<br />Assigned On</th> -->
         </tr>
       </thead>
       <tbody id="product-rows"></tbody>
